tests/lean/holes.lean.expected.out
holes.lean:4:4: error: placeholders '_' cannot be used where a function is expected
