tests/lean/holes.lean
new_frontend

def f (x : Nat) : Nat :=
id (_ x)
